fixed sizing issues causing overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body {
-	font-family: Verdana, Geneva, Tahoma, sans-serif;
 	background-color: #d1cfe2;
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	height: 100%;
 	margin: 0;
+	padding: 0;
 }
